Added docker-py dependency

--- a/templates/pyproject.toml.template
+++ b/templates/pyproject.toml.template
@@ -27,6 +27,7 @@ packages = [{include = "@package@"}]
 
 [tool.poetry.dependencies]
 acmsl-licdata-artifact-events = "^@acmslLicdataArtifactEvents@"
+docker-py = "^@dockerPy@"
 python = "^@pythonMajorMinorVersion@"
 pythoneda-shared-pythonlang-banner = "^@pythonedaSharedPythonlangBanner@"
 pythoneda-shared-pythonlang-domain = "^@pythonedaSharedPythonlangDomain@"
