--- a/templates/pyproject.toml.template
+++ b/templates/pyproject.toml.template
@@ -27,7 +27,7 @@ packages = [{include = "@package@"}]
 
 [tool.poetry.dependencies]
 acmsl-licdata-artifact-events = "^@acmslLicdataArtifactEvents@"
-docker-py = "^@dockerPy@"
+docker = "^@docker@"
 python = "^@pythonMajorMinorVersion@"
 pythoneda-shared-pythonlang-banner = "^@pythonedaSharedPythonlangBanner@"
 pythoneda-shared-pythonlang-domain = "^@pythonedaSharedPythonlangDomain@"
